<resources>
    <string name="app_name">Property Arena</string>

    <string name="developer">Developer</string>
    <string name="zone">Zone</string>
    <string name="sector">Sector</string>
    <string name="client">Client</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_project">Edit Project</string>

    <string name="open_drawer">Open the drawer</string>
    <string name="close_drawer">Close the drawer</string>

    <string name="hello_blank_fragment">Coming Soon</string>
    <string name="pro_details">Project Details</string>

    <string name="add_desc">Add</string>
    <string name="add_project_desc">Add project</string>
    <string name="add_client_desc">Add client</string>
    <string name="add_conf_desc">Add another configuration</string>
    <string name="project_img_desc">Project image</string>
    <string name="logo_desc">App logo</string>

    <string name="project_name_hint">Project name</string>
    <string name="developer_name_hint">Developer name</string>
    <string name="zone_hint">Zone/Locality</string>
    <string name="config_hint">Configuration</string>
    <string name="carpet_hint">Carpet</string>
    <string name="actual_price_hint">Actual\nPricing</string>
    <string name="price_with_tax_hint">Pricing with\ntaxes</string>
    <string name="rate_hint">Rate per sq.ft.</string>
    <string name="possession_hint">Possession date</string>
    <string name="status_hint">Status:</string>
    <string name="payment_plan_hint">Payment plan</string>
    <string name="scheme_hint">Schemes</string>
    <string name="sector_hint">Sector</string>
    <string name="launch_type_hint">Launch type</string>
    <string name="land_parcel_hint">Land parcel</string>
    <string name="towers_hint">No. of towers</string>
    <string name="units_hint">No. of units</string>
    <string name="specs_hint">Specifications</string>
    <string name="name_hint">Name</string>
    <string name="res_add_hint">Residential Address</string>
    <string name="off_add_hint">Office Address</string>
    <string name="employment_hint">Employment:</string>
    <string name="phone_hint">Mobile No.</string>
    <string name="email_hint">Email</string>
    <string name="req_locality_hint">Required Locality</string>
    <string name="req_conf_hint">Required Configuration:</string>
    <string name="req_carpet_hint">Required Carpet</string>
    <string name="req_budget_hint">Required Budget</string>
    <string name="req_status_hint">Required Status</string>
    <string name="req_specs_hint">Required Specifications</string>
    <string name="remarks_hint">Remarks</string>
    <string name="otp_hint">OTP</string>

    <string name="carpet_unit">sq. ft.</string>
    <string name="land_parcel_unit">acres</string>

    <string name="status_completed">RTMI</string>
    <string name="status_in_progress">Under Construction</string>

    <string name="sector_residential">Residential</string>
    <string name="sector_commercial">Commercial</string>
    <string name="sector_offices">Offices</string>

    <string name="launch_prelaunch">Pre-launch</string>
    <string name="launch_launch">Launch</string>
    <string name="launch_relaunch">Relaunch</string>

    <string name="save">Save</string>
    <string name="submit">Submit</string>

    <string name="developer_head">Developer:</string>
    <string name="zone_head">Zone/Locality:</string>
    <string name="carpet_head">Carpet\n(sq. ft.)</string>
    <string name="sector_head">Sector:</string>
    <string name="rate_head">Rate:</string>
    <string name="possession_head">Possession Date:</string>
    <string name="launch_head">Launch Type:</string>
    <string name="payment_plan_head">Payment plan:</string>
    <string name="scheme_head">Schemes:</string>
    <string name="specs_head">Specification:</string>

    <string name="no_project_str">Unfortunately no project found.</string>
</resources>