<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddProjectActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            app:title="@string/add_project_desc" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">

            <EditText
                android:id="@+id/a_p_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:autofillHints="@string/project_name_hint"
                android:hint="@string/project_name_hint"
                android:inputType="textCapWords"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/a_p_developer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/developer_name_hint"
                android:hint="@string/developer_name_hint"
                android:inputType="textCapWords|textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_project_name" />

            <TextView
                android:id="@+id/a_p_launch_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/launch_type_hint"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_developer_name" />

            <RadioGroup
                android:id="@+id/a_p_launch_radio_grp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_launch_head">

                <RadioButton
                    android:id="@+id/a_p_launch_prelaunch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="@string/launch_prelaunch"
                    android:text="@string/launch_prelaunch" />

                <RadioButton
                    android:id="@+id/a_p_launch_launch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="@string/launch_launch"
                    android:text="@string/launch_launch" />

                <RadioButton
                    android:id="@+id/a_p_launch_relaunch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="@string/launch_relaunch"
                    android:text="@string/launch_relaunch" />

            </RadioGroup>

            <EditText
                android:id="@+id/a_p_zone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/zone_hint"
                android:hint="@string/zone_hint"
                android:inputType="textCapWords"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_launch_radio_grp" />

            <EditText
                android:id="@+id/a_p_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/rate_hint"
                android:hint="@string/rate_hint"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_zone" />

            <EditText
                android:id="@+id/a_p_carpet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:autofillHints="@string/carpet_hint"
                android:hint="@string/carpet_hint"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@id/a_p_carpet_unit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_rate" />

            <TextView
                android:id="@+id/a_p_carpet_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/carpet_unit"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/a_p_carpet"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/a_p_conf_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_background"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/a_p_add_conf"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_carpet" />

            <ImageView
                android:id="@+id/a_p_add_conf"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:contentDescription="@string/add_conf_desc"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/a_p_conf_container"
                app:layout_constraintTop_toBottomOf="@id/a_p_carpet"
                app:tint="@color/grey" />

            <EditText
                android:id="@+id/a_p_possession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/possession_hint"
                android:focusable="false"
                android:hint="@string/possession_hint"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_conf_container" />

            <TextView
                android:id="@+id/a_p_status_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/status_hint"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_possession" />

            <RadioGroup
                android:id="@+id/a_p_status_radio_grp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_status_head">

                <RadioButton
                    android:id="@+id/a_p_status_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="@string/status_completed"
                    android:text="@string/status_completed" />

                <RadioButton
                    android:id="@+id/a_p_status_in_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="@string/status_in_progress"
                    android:text="@string/status_in_progress" />

            </RadioGroup>

            <EditText
                android:id="@+id/a_p_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:autofillHints="@string/status_hint"
                android:hint="@string/status_hint"
                android:inputType="textCapSentences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_status_radio_grp" />

            <EditText
                android:id="@+id/a_p_payment_plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/payment_plan_hint"
                android:hint="@string/payment_plan_hint"
                android:inputType="textCapSentences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_status" />

            <EditText
                android:id="@+id/a_p_scheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/scheme_hint"
                android:hint="@string/scheme_hint"
                android:inputType="textCapSentences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_payment_plan" />

            <TextView
                android:id="@+id/a_p_sector_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/sector_hint"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_scheme" />

            <RadioGroup
                android:id="@+id/a_p_sector_radio_grp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_sector_head">

                <RadioButton
                    android:id="@+id/a_p_sector_residential"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="@string/sector_residential"
                    android:text="@string/sector_residential" />

                <RadioButton
                    android:id="@+id/a_p_sector_commercial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="@string/sector_commercial"
                    android:text="@string/sector_commercial" />

                <RadioButton
                    android:id="@+id/a_p_sector_offices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="@string/sector_offices"
                    android:text="@string/sector_offices" />

            </RadioGroup>

            <TextView
                android:id="@+id/a_p_land_parcel_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/land_parcel_unit"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/a_p_land_parcel"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/a_p_land_parcel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:autofillHints="@string/land_parcel_hint"
                android:hint="@string/land_parcel_hint"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toStartOf="@id/a_p_land_parcel_unit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_sector_radio_grp" />

            <EditText
                android:id="@+id/a_p_towers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/towers_hint"
                android:hint="@string/towers_hint"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_land_parcel" />

            <EditText
                android:id="@+id/a_p_units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/units_hint"
                android:hint="@string/units_hint"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_towers" />

            <EditText
                android:id="@+id/a_p_specs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/specs_hint"
                android:hint="@string/specs_hint"
                android:inputType="textCapSentences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_units" />

            <Button
                android:id="@+id/a_p_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/a_p_specs" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>